<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, main!</string>
    <string name="app_name">先锋流量监控</string>
    <string name="main_1">流量监控</string>
    <string name="main_2">防火墙</string>
    <string name="main_3">流量预警</string>
    <string name="main_FAQ">先锋流量监控 FAQ</string>
    <string name="title_history">历史详情</string>
    <string name="title_systemsetting">系统设置</string>
    <string name="title_shakesetting">设定</string>
    <string name="title_shake_sensor_setting">设置灵敏度</string>
    <string name="main_edit">编写</string>
    <string name="twoGthreeG">\u0020\u0020 2G/3G</string>
    <string name="wifi">\u0020\u0020 总流量</string>
    <string name="todayUsed">今日已用:\u0020</string>
    <string name="rate">0</string>
    <string name="weekUsed">剩余流量:\u0020</string>
    <string name="monthTotal">本月统计:\u0020</string>
    <string name="tip">    此功能(切换联网状态)需要Root权限!\n请确定您的机器已经破解并获得Root权限.</string>
    <string name="tip_content">    此功能(切换联网状态)需要Root权限! \n您确定要继续吗?</string>
    <string name="tip_content_isroot">\n 是否获取？</string>
    <string name="tip_has_know_firewall_rule_save">    开启记忆防火墙规则后(默认开启)，先锋流量监控会自动保存所有软件的联网规则，当您将软件卸载并重新安装后，我们会自动加载之前保存的联网规则。</string>
    <string name="tip_know_shake_to_switch">    此设置开启时，只要在防火墙界面摇晃手机，即可实现自动切换排序规则。</string>
    <string name="tip_shake_sensor_setting">    滑动滑块调整摇晃灵敏度，数值越高灵敏度越高，调整后您可以摇晃手机进行测试!</string>
    <string name="caution">注意</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="has_know">我知道了</string>
    <string name="fire_applyed">防火墙已应用成功！</string>

    <item name="tag_holder" type="id"></item>
    <item name="tag_pkginfo" type="id"></item>
    <item name="tag_view" type="id"></item>
    <item name="tag_notif_holder" type="id"></item>
    <item name="tag_notif_pkgInfo" type="id"></item>
    <item name="tag_notif_id" type="id"></item>
	
    <string name="img_content_backbtn">返回按钮</string>
    <string name="img_content_backbtn_line">返回按钮的分割线</string>
    <string name="img_content_divide_line">分割线</string>
    <string name="daySelect">请选择日期</string>
    <string name="warningActionSelect">请选择预警动作</string>
    <string name="unitSelect">请选择单位</string>
    <string name="provinceSelect">请选择省份</string>
    <string name="citySelect">请选择城市</string>
    <string name="operatorSelect">请选择运营商</string>
    <string name="brankSelect">请选择品牌</string>
    <string name="onlynotify"><b>仅通知栏提示</b></string>
    <string name="notifyandvit"><b>振动提示</b></string>
    <string name="autooffnet"><b>自动断网</b></string>
    <string name="vitandaotuoffnet"><b>振动+自动断网</b></string>
    <string name="wifi_on">wifi正在开启</string>
    <string name="wifi_off">wifi正在关闭</string>
    <string name="wifi_turing"></string>
    <string name="mobile_nosim">未检测到SIM卡或者SIM卡未就绪，无法启动移动网络</string>
    <string name="mobile_notsupport">您的手机或者Android系统版本不支持操作移动数据开关</string>
    <string name="mobile_on">移动网络正在开启</string>
    <string name="mobile_off">移动网络正在关闭</string>
    <string name="fire_wall_open_fail_sysboot">防火墙启动失败，请点击重试。</string>
    <string name="reach_day_alert">已达日流量预警值</string>
    <string name="reach_month_alert">已达月流量预警值</string>
    <string name="spearheadnotify">先锋流量监控提示</string>
    <string name="fire_wall_open_fail_sysboot_set">防火墙应用失败</string>
    <string name="day_traff_over_set">日流量已超标</string>
    <string name="month_traff_over_set">月流量已超标</string>
    <string name="prefrence_setting_listbox_fresh">刷新状态栏和小部件的频率</string>
    <string name="prefrence_setting_clickbox_dataclear">清空历史数据</string>
    <string name="prefrence_setting_checkbox_notify">通知栏提示</string>
    <string name="prefrence_setting_clickbox_floatwindow">流量指示悬浮窗</string>
    <string name="prefrence_setting_clickbox_help">显示帮助信息</string>
    <string name="prefrence_setting_auto_save_firewall">自动记忆防火墙规则</string>
    <string name="prefrence_setting_is_float_untouchable">固定悬浮窗</string>
    <string name="prefrence_setting_shake_to_switch">防火墙  \'摇一摇\'</string>
    <string name="prefrence_setting_enable_switch">开启   \'摇一摇\'</string>
    <string name="prefrence_setting_switch_sensor">设置灵敏度</string>
    <string name="history_scene_mobiletraff">移动数据流量:</string>
    <string name="history_scene_wifitraff">WIFI数据流量:</string>
    <string name="history_scene_icon_show">显示的应用图标</string>
    
    
    <string name="menupop_show_text_setting">设置</string>
    <string name="menupop_show_text_faq">FAQ</string>
    <string name="menupop_show_text_more">更多</string>
    <string name="menupop_show_text_exit">退出</string>
    <string name="menupop_show_text_shareto">分享到微博</string>
    <string name="menupop_show_text_updatemess">更新日志</string>
    <string name="menupop_show_text_about">关于</string>
    <string name="menupop_show_text_weibosina">新浪微博</string>
    <string name="menupop_show_text_weibotencent">腾讯微博</string>
	
     <string name="custom_window_normal_input_unit">         单位:</string>
     <string name="custom_window_input_hint">请输入数值</string>
    <string name="custom_window_spin_input_unit"> 单位:</string>
    <string name="custom_window_clearing_data">清除中，请稍候。。。</string>
    
    <string name="weibosdk_attention">注意</string>
    <string name="weibosdk_delete_all">是否要删除这条微博？</string>
    <string name="weibosdk_ok">是</string>
    <string name="weibosdk_cancel">否</string>
    <string name="weibosdk_app_name">com_weibo_android</string>
    <string name="weibosdk_send_login">登录</string>
    <string name="weibosdk_send_send">发送</string>
    <string name="weibosdk_photo">拍照</string>
    <string name="weibosdk_close">关闭</string>
    <string name="weibosdk_share_dialog_title">新浪微博</string>
    <string name="weibosdk_share_dialog_title2">腾讯微博</string>
    <string name="weibosdk_please_login">请登录！</string>
    <string name="weibosdk_send_sending">开始发送微博</string>
    <string name="weibosdk_send_sending_enmpty">请输入内容!</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败,请稍候重试。</string>
    <string name="weibosdk_send_failed_sendsame">短时间内不能发表重复的微博。</string>
    <string name="weibosdk_del_pic">是否删除图片？</string>
    <string name="weibosdk_no_network">无法连接到网络,请检查网络配置</string>
    
    <string name="weibosdk_Auth_success">认证成功</string>
    <string name="weibosdk_Auth_fail">认证失败</string>
    <string name="weibosdk_Auth_error">认证错误</string>
    <string name="weibosdk_Auth_cancel">认证已取消</string>
    <string name="weibosdk_Auth_exception">认证微博错误</string>
    <string name="weibosdk_Auth_SessionValidFail">认证文件无效</string>
    
    <string name="weibosdk_tencent_response_fail">微博认证失败</string>
    
    <string name="weibosdk_comment">评论</string>
    <string name="weibosdk_forward">转发</string>
    <string name="weibosdk_fav">收藏</string>
    
    <string name="weibosdk_edittext_content">我正在使用#先锋流量监控#，它完全免费无广告，体积小巧，监控流量准确，还有丰富的图表显示。推荐你们试试，安卓市场下载地址：http://t.cn/zl3fnku</string>
</resources>