<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menupopmenu_layout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#3a3a3a"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/menubtn_setting"
            style="@style/MenuBtnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="20dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="20dip"
            android:text="@string/menupop_show_text_setting" />

        <Button
            android:id="@+id/menubtn_faq"
            style="@style/MenuBtnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:paddingBottom="20dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="20dip"
            android:text="@string/menupop_show_text_faq" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#3a3a3a"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/menubtn_more"
            style="@style/MenuBtnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:paddingBottom="20dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="20dip"
            android:text="@string/menupop_show_text_more" />

        <Button
            android:id="@+id/menubtn_exit"
            style="@style/MenuBtnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:paddingBottom="20dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="20dip"
            android:text="@string/menupop_show_text_exit" />
    </LinearLayout>

</LinearLayout>