<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bground_dark"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/maintab_toolbar_bg"
        android:gravity="center"
        android:text="手机卡设置"
        android:textColor="@color/whitesmoke"
        android:textSize="19dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="省份"
            android:textColor="@color/darkgray2"
            android:textSize="19dip" />

        <Button
            android:id="@+id/province"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@drawable/bg_about"
            android:prompt="@string/provinceSelect"
            android:textColor="@color/blueflock"
            android:textSize="19dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="城市"
            android:textColor="@color/darkgray2"
            android:textSize="19dip" />

        <Button
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@drawable/bg_about"
            android:prompt="@string/citySelect"
            android:textColor="@color/blueflock"
            android:textSize="19dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="运营商"
            android:textColor="@color/darkgray2"
            android:textSize="19dip" />

        <Button
            android:id="@+id/operator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@drawable/bg_about"
            android:prompt="@string/operatorSelect"
            android:textColor="@color/blueflock"
            android:textSize="19dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="手机卡品牌"
            android:textColor="@color/darkgray2"
            android:textSize="19dip" />

        <Button
            android:id="@+id/brand"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@drawable/bg_about"
            android:prompt="@string/brankSelect"
            android:textColor="@color/blueflock"
            android:textSize="19dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkgray2"
            android:textSize="19dip" />

        <Button
            android:id="@+id/next"
            android:layout_width="150dip"
            android:layout_height="60dip"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btnselector_main"
            android:text="下一步"
            android:textColor="@color/darkgray2"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>