<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bground_dark"
    android:orientation="vertical" >

    <!-- 标题栏开始 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:background="@drawable/maintab_toolbar_bg"
        android:orientation="horizontal"
        android:paddingRight="10dip" >

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18dip" />

        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_refresh_icon_off"
            android:textColor="@color/darkgray2" />
    </RelativeLayout>
    <!-- 标题栏结束 -->


    <!-- 第一行开始 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_margin="5dp"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <!-- 第一行的第一行标题开始 -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/mobile2"
            android:text="@string/twoGthreeG"
            android:textColor="@color/darkgray2"
            android:textSize="25dp" />

        <!-- 第一行的第一行标题 结束 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_about"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1.0"
                android:orientation="horizontal"
                android:paddingLeft="5dip"
                android:paddingRight="5dip" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todayUsed"
                        android:textColor="@color/darkgray2"
                        android:textSize="20dp" />
                </LinearLayout>

               

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/todayRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate"
                        android:textColor="@color/darkgray2"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/unit1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="KB"
                        android:textColor="@color/darkgray2"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>

            
             <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/divider" />
             
             
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1.0"
                android:orientation="horizontal"
                android:paddingLeft="5dip"
                android:paddingRight="5dip" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthTotal"
                        android:textColor="@color/darkgray2"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/gotoThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_about"
                        android:paddingLeft="15dip"
                        android:text="未设置  "
                        android:textColor="@color/darkgreen"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

             <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/divider" />
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1.0"
                android:orientation="horizontal"
                android:paddingLeft="5dip"
                android:paddingRight="5dip" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weekUsed"
                        android:textColor="@color/darkgray2"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/weekRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate"
                        android:textColor="@color/darkgray2"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/unit2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="KB"
                        android:textColor="@color/darkgray2"
                        android:textSize="20dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- 第一行结束 -->
    </LinearLayout>

    <!-- 第二行开始 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_margin="5dip"
        android:layout_weight="1.0"
        android:background="@drawable/content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearlayout_wifi"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>
    <!-- 第二行结束 -->

</LinearLayout>